# TitanVideoEditor

./: CMakeLists.txt  Makefile  README.md
assets/filters/: test.glsl
images/: ImageToC.java  README.txt
src/: main.cpp  main.h  main.hpp  utils.cpp  utils.hpp
src/assets/: assetdata.hpp
src/editor/: editor.cpp  editor.hpp  filters.hpp
src/gui/: cursors.cpp  cursors.h  gui_content.cpp  gui_content.h  gui_content.hpp  gui_layout.cpp  gui_layout.h  gui_layout.hpp  render_util.cpp  render_util.h
src/gui/content/: gui_content_file_browser.cpp  gui_content_player.cpp  gui_content_properties.cpp  gui_content_timeline.cpp  gui_content_timer.cpp
src/gui/lib/: cursors.cpp  cursors.h  cursors.hpp  icons.cpp  icons.h  icons.hpp  images.cpp  images.h  images.hpp
tools/: c_prepreprocessor.cpp  file_embed.cpp  icon_autogen.cpp  image_to_cpp.cpp
